...
              await appdb.registerOrder(order);
              ref.invalidate(userProvider(widget.name));
              if (context.mounted) {
                UserRoute(widget.name).go(context);
              }
            },
      child: Text('Submit Order'),
    );

    return Scaffold(
      appBar: AppBar(title: Text('Order (User: ${widget.name})')),
      body: SafeArea(
        child: Column(
...
